--- a/app/sass/_search.scss
+++ b/app/sass/_search.scss
@@ -71,7 +71,7 @@
     input {
       display: inline-block;
       vertical-align: top;
-      padding: 9px 60px 9px 5px;
+      padding: 9px 40px 9px 5px;
       width: 100%;
       height: 34px;
       border: 1px solid #0a4c84;
@@ -81,6 +81,14 @@
       font-size: 13px;
       line-height: 13px;
       -webkit-appearance: none;
+
+      &::-webkit-search-decoration,
+      &::-webkit-search-cancel-button,
+      &::-webkit-search-results-button,
+      &::-webkit-search-results-decoration {
+        cursor: pointer;
+      }
+
     }
     button[type=submit] {
       position: absolute;
