--- a/app/sass/_site.scss
+++ b/app/sass/_site.scss
@@ -104,7 +104,7 @@
     @include align-items(center);
     position: relative;
     width: 100%;
-    height: 70px;
+    height: 110px;
     background: #ededed;
 
     &-layout {
@@ -179,6 +179,8 @@
   &__open-menu {
     position: relative;
     margin-bottom: 30px;
+    margin-right: 0;
+    margin-left: auto;
     width: 200px;
     height: 46px;
     padding: 0 32px 0 36px;
@@ -362,7 +364,7 @@
     }
     &__open-menu {
       position: absolute;
-      top: 50px;
+      top: 32px;
       right: 14px;
       margin-bottom: 0;
     }
