--- a/app/sass/_popup.scss
+++ b/app/sass/_popup.scss
@@ -8,7 +8,6 @@
   width: 0;
   height: 0;
   z-index: 10000;
-  padding-top: 40px;
   background: $popup-back;
   text-align: center;
   transition: opacity 500ms ease-in-out;
@@ -27,23 +26,142 @@
 
   &__wrap {
     position: relative;
+    padding: 20px;
     z-index: 2;
-    width: 527px;
-    margin: 0 auto;
-    padding-bottom: 40px;
   }
 
   &__content {
     display: none;
-    text-align: left;
-    padding: 20px 0;
+    position: relative;
+    max-width: 620px;
+    margin: 0 auto;
+    padding: 46px 40px;
+    background-color: #fff;
+    border-radius: 4px;
+    font-size: 13px;
+    color: #999999;
+    text-align: center;
+
+    p {
+      line-height: 18px;
+    }
+
+    ul {
+      margin-bottom: 26px;
+      font-size: 14px;
+
+      li {
+        margin-bottom: 5px;
+      }
+    }
+
+    a,
+    a:visited {
+      color: #0a4c84;
+      text-decoration: underline;
+
+      &:hover { text-decoration: none }
+    }
+
+    &-column {
+      width: 50%;
+      padding: 11px 0 0 40px;
+      text-align: left;
+
+      &:first-child {
+        border-right: 1px solid #999999;
+        padding: 11px 40px 0 0;
+      }
+    }
+
+    .login,
+    .reset {
+      display: flex;
+    }
+
+    .reset {
+      align-items: center;
+    }
+
+    &-btns {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 10px 0 0 0;
+
+      a,
+      a:visited { color: #000 }
+    }
+
+    .btn {
+      height: 34px;
+      min-width: 111px;
+    }
+
+    input {
+      width: 100%;
+      height: 34px;
+      margin-bottom: 8px;
+      padding: 0 12px;
+      border-radius: 4px;
+      border: 1px solid #b3b3b3;
+      background: #fff;
+      font-size: 13px;
+
+      &::-webkit-input-placeholder {
+        color: #b2b2b2;
+      }
+      &::-moz-placeholder {
+        color: #b2b2b2;
+      }
+      &:-ms-input-placeholder {
+        color: #b2b2b2;
+      }
+      &:-moz-placeholder {
+        color: #b2b2b2;
+      }
+    }
+  }
+
+  &__success {
+    max-width: 480px;
+    padding: 58px 40px 40px;
+
+    .popup__title {
+      margin-bottom: 16px;
+    }
+
+    .btn {
+      margin-top: 24px;
+    }
+  }
+
+  &__thanks {
+    max-width: 480px;
+    padding: 58px 40px 40px;
+
+    .popup__title {
+      margin-bottom: 16px;
+    }
+
+    .btn {
+      margin-top: 24px;
+    }
+  }
+
+  &__title {
+    display: block;
+    margin-bottom: 25px;
+    font-size: 20px;
+    color: #000;
+    @include main-font1();
   }
 
   &__close {
     position: absolute;
     top: 17px;
-    width: 15px;
-    height: 15px;
+    width: 20px;
+    height: 20px;
     right: 18px;
     text-indent: -5000px;
     cursor: pointer;
@@ -54,8 +172,8 @@
       top: 50%;
       left: 0;
       right: 0;
-      height: 3px;
-      background: $popup-close-back;
+      height: 1px;
+      background: #000;
       transform-origin: center;
       content: '';
     }
