--- a/app/sass/_popup.scss
+++ b/app/sass/_popup.scss
@@ -26,6 +26,7 @@
 
   &__wrap {
     position: relative;
+    display: inline-block;
     padding: 20px;
     z-index: 2;
   }
@@ -63,34 +64,19 @@
       &:hover { text-decoration: none }
     }
 
-    &-column {
-      width: 50%;
-      padding: 11px 0 0 40px;
-      text-align: left;
-
-      &:first-child {
-        border-right: 1px solid #999999;
-        padding: 11px 40px 0 0;
-      }
-    }
-
-    .login,
-    .reset {
-      display: flex;
-    }
-
     .reset {
       align-items: center;
     }
 
     &-btns {
       display: flex;
-      justify-content: space-between;
-      align-items: center;
-      padding: 10px 0 0 0;
+      flex-direction: column;
+      padding: 10px 0 40px 0;
 
       a,
       a:visited { color: #000 }
+
+      .btn { margin-bottom: 20px }
     }
 
     .btn {
@@ -200,5 +186,37 @@
     width: 100px;
     height: 100px;
   }
+}
 
+@media (min-width: $tablet-portrait) {
+  .popup {
+
+    &__content {
+
+      &-column {
+        width: 50%;
+        padding: 11px 0 0 40px;
+        text-align: left;
+
+        &:first-child {
+          border-right: 1px solid #999999;
+          padding: 11px 40px 0 0;
+        }
+      }
+
+      &-btns {
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+        padding: 10px 0 0 0;
+
+        .btn { margin-bottom: 0 }
+      }
+
+      .login,
+      .reset {
+        display: flex;
+      }
+    }
+  }
 }
