--- a/app/sass/inner.scss
+++ b/app/sass/inner.scss
@@ -1,6 +1,7 @@
 @import "main";
 @import "single-post";
 @import "search";
+@import "popup";
 @import "nice-radio";
 @import "articles-list";
 @import "search-results";
