--- a/app/sass/_site.scss
+++ b/app/sass/_site.scss
@@ -91,9 +91,33 @@
     &-cooperation {
       display: none;
     }
-    .btn{
-      @include absoluteCenterX();
+
+    &-btns {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      position: absolute;
+      left: 0;
       bottom: 20px;
+      width: 100%;
+      padding: 0 14px;
+
+      a,
+      a:visited {
+        font-size: 13px;
+        color: #1762a0;
+        text-decoration: underline;
+
+        &:hover { text-decoration: none }
+
+        &.btn,
+        a.btn {
+          min-width: 98px;
+          margin-bottom: 4px;
+          color: #fff;
+          text-decoration: none;
+        }
+      }
     }
 
   }
@@ -289,6 +313,71 @@
 
   }
 
+  &__form {
+    padding: 35px 0;
+
+    &-wrap {
+      max-width: 380px;
+    }
+
+    &-btns {
+      display: flex;
+      flex-direction: column;
+      padding: 12px 0 0 0;
+
+      a,
+      a:visited {
+        color: #0a4c84;
+        text-decoration: underline;
+
+        &:hover { text-decoration: none }
+      }
+
+      .btn { margin-bottom: 20px }
+
+      .nice-checkbox { margin: 0 }
+    }
+
+    .btn {
+      height: 34px;
+      min-width: 118px;
+      padding: 0 33px;
+    }
+
+    input {
+      width: 100%;
+      height: 34px;
+      margin-bottom: 8px;
+      padding: 0 12px;
+      border-radius: 4px;
+      border: 1px solid #b3b3b3;
+      background: #fff;
+      font-size: 13px;
+
+      &::-webkit-input-placeholder {
+        color: #b2b2b2;
+      }
+      &::-moz-placeholder {
+        color: #b2b2b2;
+      }
+      &:-ms-input-placeholder {
+        color: #b2b2b2;
+      }
+      &:-moz-placeholder {
+        color: #b2b2b2;
+      }
+    }
+
+    .nice-checkbox {
+      margin: 8px 0 22px;
+    }
+
+    &-footer {
+      margin: 20px 0 0;
+      padding: 14px 0 0;
+      border-top: 1px solid #d9d9d9;
+    }
+  }
 }
 
 @media (min-width: $tablet-portrait) {
@@ -318,11 +407,15 @@
 
       }
 
-      .btn{
+      &-btns {
+        flex-direction: column;
+        justify-content: center;
         @include absoluteCenterY();
         left: auto;
         bottom: auto;
         right: 14px;
+        width: auto;
+        padding: 0;
       }
 
     }
@@ -370,20 +463,7 @@
     }
 
   }
-}
-@media (min-width: $tablet-landscape) {
-  .site {
 
-  }
-}
-@media (min-width: $desktop) {
-  .site {
-
-    &__content {
-      padding-bottom: 173px;
-    }
-
-  }
 }
 
 @media (max-width: $tablet-landscape) {
@@ -399,23 +479,41 @@
         span {
           width: 100%;
         }
-       div {
-         width: 30%;
+        div {
+          width: 30%;
 
-         &:last-of-type {
-           width: 13%;
-         }
+          &:last-of-type {
+            width: 13%;
+          }
 
-         img {
-           width: 100%;
-           height: auto;
-         }
+          img {
+            width: 100%;
+            height: auto;
+          }
 
-       }
+        }
 
       }
 
     }
+  }
+}
+@media (min-width: $desktop) {
+  .site {
 
+    &__content {
+      padding-bottom: 173px;
+    }
+
+    &__form {
+
+      &-btns {
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+
+        .btn { margin-bottom: 0 }
+      }
+    }
   }
 }
