--- a/app/sass/inner.scss
+++ b/app/sass/inner.scss
@@ -2,6 +2,8 @@
 @import "single-post";
 @import "search";
 @import "popup";
+@import "container";
+@import "websters-select";
 @import "nice-radio";
 @import "articles-list";
 @import "search-results";
