--- a/app/sass/_content.scss
+++ b/app/sass/_content.scss
@@ -142,6 +142,20 @@
   }
 }
 
+.attention {
+  padding: 14px 19px 19px;
+  margin-bottom: 50px;
+  border: 1px solid #d9d9d9;
+  border-radius: 4px;
+  background: #f7f7f7;
+  font-size: 13px;
+  line-height: 1.4;
+
+  p {
+    margin-bottom: 0;
+  }
+}
+
 @media (min-width: $desktop) {
 
   .content {
