--- a/app/sass/_site.scss
+++ b/app/sass/_site.scss
@@ -314,28 +314,34 @@
   }
 
   &__form {
-    padding: 35px 0;
+
+    &.columns {
+
+      .site__form-wrap {
+        max-width: 399px;
+      }
+
+      .btns {
+        padding: 10px 0 0 0;
+      }
+    }
 
     &-wrap {
       max-width: 380px;
     }
 
-    &-btns {
-      display: flex;
-      flex-direction: column;
-      padding: 12px 0 0 0;
+    &-block {
+      margin-bottom: 20px;
 
-      a,
-      a:visited {
-        color: #0a4c84;
-        text-decoration: underline;
-
-        &:hover { text-decoration: none }
+      label {
+        margin-bottom: 5px;
+        font-size: 13px;
+        color: #b2b2b2;
       }
+    }
 
-      .btn { margin-bottom: 20px }
-
-      .nice-checkbox { margin: 0 }
+    &-row {
+      margin-bottom: 10px;
     }
 
     .btn {
@@ -378,6 +384,23 @@
       border-top: 1px solid #d9d9d9;
     }
   }
+}
+.btns {
+  display: flex;
+  flex-direction: column;
+  padding: 12px 0 0 0;
+
+  a,
+  a:visited {
+    color: #0a4c84;
+    text-decoration: underline;
+
+    &:hover { text-decoration: none }
+  }
+
+  .btn { margin-bottom: 20px }
+
+  .nice-checkbox { margin: 0 }
 }
 
 @media (min-width: $tablet-portrait) {
@@ -507,13 +530,41 @@
 
     &__form {
 
-      &-btns {
-        flex-direction: row;
-        justify-content: space-between;
+      &.columns {
+
+        .btns {
+          padding: 10px 0 0 110px;
+        }
+      }
+
+      &-block {
+        margin-bottom: 30px;
+
+        label {
+          margin-bottom: 0;
+          padding-right: 5px;
+        }
+      }
+
+      &-row {
+        display: grid;
+        grid-template-columns: 110px 1fr;
         align-items: center;
 
-        .btn { margin-bottom: 0 }
+        input {
+          margin-bottom: 0;
+        }
       }
     }
+  }
+  .btns {
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+
+    &.right { justify-content: flex-end }
+    &.center { justify-content: center }
+
+    .btn { margin-bottom: 0 }
   }
 }
