--- a/app/sass/_websters-select.scss
+++ b/app/sass/_websters-select.scss
@@ -1,53 +1,38 @@
 .websters-select {
-  overflow: hidden;
   display: inline-block;
   vertical-align: top;
   box-sizing: border-box;
   position: relative;
-  width: 200px;
-  height: 22px;
-  border: 1px solid $websters-select-border;
+  width: 100%;
+  height: 34px;
+  padding: 0 12px;
+  border-radius: 4px;
+  border: 1px solid #b3b3b3;
+  background: #fff;
+  font-size: 13px;
+  @include main-font2();
 
   &_opened {
 
     .websters-select__arrow {
-      transform: rotate(180deg);
+
     }
 
   }
 
   &__arrow{
     position: absolute;
-    top: 0;
-    right: 0;
+    top: 7px;
+    right: 9px;
     bottom: 0;
-    width: 20px;
+    height: 10px;
+    width: 10px;
+    box-sizing: border-box;
+    border: 2px solid #b3b3b3;
+    clip: rect(3px, 10px, 10px, 3px);
+    transform: rotate(45deg);
     transform-origin: center;
-    -webkit-transition: -webkit-transform 200ms ease-in-out;
-    transition: transform 200ms ease-in-out;
-
-    &:after,
-    &:before {
-      position: absolute;
-      top: 9px;
-      width: 10px;
-      height: 2px;
-      border-radius: 2px;
-      background: $websters-select-border;
-      content: '';
-    }
-
-    &:after {
-      left: 4px;
-      transform: rotate(70deg);
-
-    }
-
-    &:before {
-      right: 3px;
-      transform: rotate(-70deg);
-
-    }
+    transition: transform .3s ease-in-out;
   }
 
   &__item {
@@ -55,7 +40,7 @@
     @include absoluteCenterY();
     right: 20px;
     left: 5px;
-    padding: 1px 5px 0;
+    padding: 0 5px;
     box-sizing: border-box;
     white-space: nowrap;
     text-overflow: ellipsis;
@@ -88,26 +73,33 @@
     position: absolute;
     z-index: 10;
     box-sizing: border-box;
-    border: 1px solid $websters-select-border;
-    background: $websters-select-popup-back;
+    border-radius: 4px;
+    border: 1px solid #b3b3b3;
+    background: #fff;
+    font-size: 13px;
 
     ul {
       z-index: 1;
+      list-style: none;
     }
 
     li {
       white-space: nowrap;
       overflow: hidden;
       cursor: pointer;
+      padding: 5px 10px !important;
+      @include main-font2();
+
+      &:after { display: none }
 
       &:hover {
-        color: $websters-select-popup-item-active-color;
-        background: $websters-select-popup-item-active-back;
+        color: #fff;
+        background: #0a4c84;
       }
 
       &.active {
-        color: $websters-select-popup-item-active-color !important;
-        background: $websters-select-popup-item-active-back !important;
+        color: #fff !important;
+        background: #0a4c84 !important;
       }
 
     }
