new tasks has done

--- a/app/sass/inner.scss
+++ b/app/sass/inner.scss
@@ -3,6 +3,7 @@
 @import "search";
 @import "popup";
 @import "container";
+@import "plans";
 @import "websters-select";
 @import "nice-radio";
 @import "articles-list";
