new tasks has done

--- a/app/sass/_site.scss
+++ b/app/sass/_site.scss
@@ -120,6 +120,9 @@
       }
     }
 
+    span {
+      color: rgba(10,76,132, .5);
+    }
   }
   &__footer {
     @include flexbox();
@@ -416,16 +419,18 @@
         @include align-items(center);
         @include main-font4();
         @include absoluteCenterY();
-        left: 362px;
-        right: 150px;
-        margin: -2px 0 0;
+        left: 329px;
+        margin: -4px 0 0;
         font-size: 13px;
         line-height: 15px;
         color: #b2b2b2;
 
+        div {
+          margin-right: 16px;
+        }
         span {
-          margin: 0 0 4px;
-          letter-spacing: -0.2px;
+          margin: 0 30px 2px 0;
+          font-weight: 400;
         }
 
       }
