--- a/app/sass/_site.scss
+++ b/app/sass/_site.scss
@@ -265,7 +265,7 @@
 
   }
   &__aside {
-    //overflow: hidden;
+    overflow: hidden;
     height: 0;
     min-height: 0;
     position: relative;
